# basethemes

./: .gitignore  README.md  pyproject.toml
src/basethemes/: applier.py  base.py  color.py  foo.py  terminal_colors.py
tests/: _strats.py  base_test.py  color_test.py
