[project]
name = "basethemes"
version = "0.1.0"
authors = [
    { name="Alex Coleman", email="coleman.g.alex@gmail.com" }
]
description = "Tools for working with base 16/24 themes"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "GitPython",
    "pyyaml"
]

[project.optional-dependencies]
dev = [
    "ipdb",
    "pdbpp",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

